K8s/bar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar-app
  template:
    metadata:
      labels:
        app: bar-app
    spec:
      containers:
        - name: bar-app
          image: imagekitio/service-2:latest

---
apiVersion: v1
kind: Service
metadata:
  name: bar-app-service
spec:
  type: ClusterIP
  selector:
    app: bar-app
  ports:
    - port: 3000
      targetPort: 3000
