K8s/foo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo-app
  template:
    metadata:
      labels:
        app: foo-app
    spec:
      containers:
        - name: foo-app
          image: imagekitio/service-1:latest

---
apiVersion: v1
kind: Service
metadata:
  name: foo-app-service
spec:
  type: ClusterIP
  selector:
    app: foo-app
  ports:
    - port: 3000
      targetPort: 3000
