K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  rules:
    - host: foo.com
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: foo-app-service
                port:
                  number: 3000
    - host: bar.com
      http:
        paths:
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: bar-app-service
                port:
                  number: 3000
